# PyNifly

NiflyDLL/: CMakeLists.txt
